--- a/student/app/index.css
+++ b/student/app/index.css
@@ -24,11 +24,24 @@ body{
 
 .content{
     position: relative;
-    top:78px;
+    top:90px;
     left: 220px;
     width: 85%;
     overflow-x: hidden;   
 }
 .pageTitle{
     margin:15px 10px 15px 0;
+}
+.avatar{
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    line-height: 1;
+    border-radius:500px;
+    white-space: nowrap;
+    font-weight: bold;
+}
+.img{
+    border-radius: 500px;
+    width: 100%;
 }
